          - add support for dependencies (naemon only)
          - add host alias to exportable columns
          - add eventhandler quick commands
          - fix offset calculation in rest api
          - fix page not found issue when using browser history back
          - fix cross site scripting issues
          - REST:
            - add aggregation function support
          - Config Tool:
            - add authorization tab to contacts and contactgroups
            - add support for dependencies and escalations
          - Business Process:
            - delay calculation during core reloads
            - add support for http federation
            - add drill down output as default filter
            - fix zooming in chrome
            - disable automatic calculation by setting refresh_interval to zero
            - add read_only mode
            - add `post_refresh_cmd` hook
            - use paging when having many business processes
          - Panorama:
            - add direct link with tabs
            - add theme selector to grafana images
            - add color selector to grafana images
            - add axis color option to speedometer
            - fix saving permissions when list is empty
          - internals:
            - move libraries to vendor folder
            - update jquery to 3.3.1
            - replace jscal2 with daterangepicker

2.26-2   Tue Dec 18 17:33:08 CET 2018
          - display external commands errors if possible
            - right now only naemon >= 1.0.9 does support this
          - Panorama:
            - fix panels not beeing updated in single window mode

2.26     Fri Dec  7 21:34:29 CET 2018
          - add admin role in cgi.cfg
          - add graph_proxy_enabled option to passthrough pnp and grafana from remote http sites
          - remove cluetip library for popup graphs
          - fix reload issue in firefox
          - fix escaping hostnames and service description in excel exports