@@ -669,6 +669,7 @@ list of supported commands:
  - link:rest_commands.html#post-hosts-name-cmd-acknowledge_host_problem_expire[acknowledge_host_problem_expire]
  - link:rest_commands.html#post-hosts-name-cmd-add_host_comment[add_host_comment]
  - link:rest_commands.html#post-hosts-name-cmd-change_host_modattr[change_host_modattr]
+ - link:rest_commands.html#post-hosts-name-cmd-del_active_host_downtimes[del_active_host_downtimes]
  - link:rest_commands.html#post-hosts-name-cmd-del_all_host_comments[del_all_host_comments]
  - link:rest_commands.html#post-hosts-name-cmd-delay_host_notification[delay_host_notification]
  - link:rest_commands.html#post-hosts-name-cmd-disable_all_notifications_beyond_host[disable_all_notifications_beyond_host]
@@ -934,6 +935,7 @@ list of supported commands:
  - link:rest_commands.html#post-services-host-service-cmd-acknowledge_svc_problem_expire[acknowledge_svc_problem_expire]
  - link:rest_commands.html#post-services-host-service-cmd-add_svc_comment[add_svc_comment]
  - link:rest_commands.html#post-services-host-service-cmd-change_svc_modattr[change_svc_modattr]
+ - link:rest_commands.html#post-services-host-service-cmd-del_active_service_downtimes[del_active_service_downtimes]
  - link:rest_commands.html#post-services-host-service-cmd-del_all_svc_comments[del_all_svc_comments]
  - link:rest_commands.html#post-services-host-service-cmd-delay_svc_notification[delay_svc_notification]
  - link:rest_commands.html#post-services-host-service-cmd-disable_passive_svc_checks[disable_passive_svc_checks]
